# diye

./: .gitignore  .projections.json  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.github/docs/: architecture.plantuml
src/: camera.cpp  camera.hpp  debug_draw_renderer.cpp  debug_draw_renderer.hpp  experiment.hpp  geometry.hpp  gl.cpp  gl.hpp  glfw.hpp  glm.hpp  image.cpp  image.hpp  input.cpp  input.hpp  main.cpp  renderer.hpp  sdl.hpp  shader.hpp  shader__apple.hpp  transform.cpp  transform.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
src/core/: all.hpp  animation_curve.cpp  animation_curve.hpp  camera.cpp  camera.hpp  colors.hpp  map.hpp  math.cpp  math.hpp  timer.hpp  transform.cpp  transform.hpp  types.hpp
src/experiments/: experiment.cpp  experiment.hpp  half_edge.hpp  half_edge_experiment.hpp
src/geometry/: half_edge.cpp  half_edge.hpp  half_edge_mesh.cpp  half_edge_mesh.hpp  mesh.hpp
src/gl/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  core.hpp  debug_renderer.cpp  debug_renderer.hpp  descriptor_pool.cpp  descriptor_pool.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  semaphore.cpp  semaphore.hpp  shader_modules.cpp  (+9 more)
src/io/: binary.cpp  binary.hpp  image.cpp  image.hpp  obj.cpp  obj.hpp
src/shaders/dummy/: Makefile  build.ninja  dummy.slang  vert.glsl
src/ui/: roboto.inc  ui.cpp  ui.hpp
